# PennyLane

./: Creating a quantum node.md  Defining a device.md  Device options.md  PennyLane.md  Quantum circuits.md  Quantum functions.md  pyproject.toml
pennylane_example/: defining_a_device.py  quantum_circuit.py  shot_batching.py  shot_batching_example1.py  shot_batching_indexing.py  shot_batching_result.py  wires.py  wires_custom_label.py  wires_quantum_function_with_label.py
pennylane_example/quantum_node/: creating_a_quantum_node.py  quantum_node_result.py  quantum_node_view.py  quantum_node_view_mpl.py
