[tool.poetry]
name = "pennylane-example"
version = "0.1.0"
description = ""
authors = ["Ibrahim <ibrahimnd2000@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
PennyLane = "^0.32.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
